styles/style.css
/* CSS RESET STYLES */

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


/* MAIN STYLES */
header {
  background-color: blue;
  margin-top: -20px;
}

main {
  display: flex;
  justify-content: center;
  /* background-color: black; */
  /* background-image: url("./images/forest.jpg"); */
}

nav {
  margin: auto;
  margin-top: 20px;
  font-size: 1.4em;
  padding-top: 10px;
}

nav > ul {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

a {
  background-color: yellow;
  width: 100px;
  text-align: center;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid black;
  border-bottom: none;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;;
}

a:hover {
  background-color: lightyellow;
}

.content {
  border: 1px solid black;
  margin: 30px 0;
  text-align: center;
  padding-bottom: 30px;
  border-radius: 20px;
  backdrop-filter: grayscale(.5) blur(5px);

  border-top: 2px solid rgba(225, 225, 225, 0.3);
  border-left: 2px solid rgba(225, 225, 225, 0.1);
  border-right: 1px solid rgba(225, 225, 225, 0.2);
}

.menu-content div {
  border: 1px solid black;
}

.selected-tab {
  background-color: lightyellow;
}

h1 {
  text-align: center;
  margin-top: 40px;
  font-size: 3.0em;
}

.pancake-img {
  margin-top: 25px;
}

.about {
  font-size: 1.2em;
}

.about > p {
  line-height: 22px;
}

.coffee-drinker-img {
  margin-top: 30px;
}

h2 {
  font-size: 1.5em;
}

.hours {
  font-size: 1.2em;
}

.hours > p {
  line-height: 28px;
}

.location {
  margin: auto;
  margin-top: 30px;
  font-size: 1.4em;
  width: 320px;
}

footer {
  background-color: orange;
  width: 100%;
  height: 40px;
  display: flex; 
  justify-content: center;
  align-items: center;
}

.about, .hours {
  margin: auto;
  border: 1px solid black;
  padding: 10px;
  margin-top: 30px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}


/* MOBILE STYLES */
@media only screen and (max-width: 480px) {
  nav {
    width: 320px;
  }

  h1 {
    margin-left: 10px;
    margin-right: 10px;
  }

  img {
    width: 320px;
  }

  .about, .hours {
    width: 300px;
  }
}

/* TABLET STYLES */
@media only screen and (min-width: 481px) and (max-width: 768px) {
  nav {
    width: 481px;
  }

  img {
    width: 481px;
  }

  .about, .hours {
    width: 481px;
  }
}

/* DESKTOP STYLES */
@media only screen and (min-width: 769px) {
  .content {
    min-width: 60%;
    max-width: 840px;
  }

  nav {
    width: 481px;
  }

  img {
    width: 481px;
  }

  .about, .hours {
    width: 481px;
  }
}

